src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Agent__c</fullName>
        <label>Marketing Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Janelle Gladstone</fullName>
                </value>
                <value>
                    <fullName>Mary Helen Turner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NS_Sync__c</fullName>
        <label>NetSuite Sync</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Mapping__c</fullName>
        <label>NetSuite Mapping</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Pull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Pull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_B_Marketing_Email__c</fullName>
        <label>O/B Marketing Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Off_Site_Event__c</fullName>
        <formula>TEXT( Account.Off_Site_Event__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Off Site Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Mailing_Status_Display__c</fullName>
        <formula>IF ( ISPICKVAL(StrikeForce1__USAddress_Mailing_Status__c,&quot;Verified&quot;), 
IMAGE(&quot;/resource/StrikeForce1__CheckMark&quot;,&quot;Verified&quot;), 
IMAGE(&quot;/resource/StrikeForce1__XMark&quot;,&quot;Not Verified&quot;)) 
&amp; &quot; &quot; &amp; 
CASE(StrikeForce1__USAddress_Mailing_Status__c, 
&quot;Verified&quot;,&quot;Verified&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=ContactMailing&quot;,&quot;Mark as Unverified&quot;,&quot;_self&quot;), 
&quot;Not Verified&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=ContactMailing&quot;,&quot;Mark as Verified&quot;,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Mailing_Status__c</fullName>
        <label>Mailing Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Mailing_Verify__c</fullName>
        <formula>HYPERLINK(&quot;/apex/StrikeForce1__USAddressVerification?id=&quot;&amp;Id&amp;&quot;&amp;MappingName=ContactMailing&quot;,&quot;Verify Address&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Other_Status_Display__c</fullName>
        <formula>IF ( ISPICKVAL(StrikeForce1__USAddress_Other_Status__c,&quot;Verified&quot;), 
IMAGE(&quot;/resource/StrikeForce1__CheckMark&quot;,&quot;Verified&quot;), 
IMAGE(&quot;/resource/StrikeForce1__XMark&quot;,&quot;Not Verified&quot;)) 
&amp; &quot; &quot; &amp; 
CASE(StrikeForce1__USAddress_Other_Status__c, 
&quot;Verified&quot;,&quot;Verified&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=ContactOther&quot;,&quot;Mark as Unverified&quot;,&quot;_self&quot;), 
&quot;Not Verified&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=ContactOther&quot;,&quot;Mark as Verified&quot;,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Other_Status__c</fullName>
        <label>Other Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Other_Verify__c</fullName>
        <formula>HYPERLINK(&quot;/apex/StrikeForce1__USAddressVerification?id=&quot;&amp;Id&amp;&quot;&amp;MappingName=ContactOther&quot;,&quot;Verify Address&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Fax_DaysRemaining__c</fullName>
        <formula>IF(NOT(ISNULL(StrikeForce4__DNC_Fax_LastChecked__c)), 
&quot; Valid for &quot; &amp; 
TEXT(ROUND(180 - (NOW() - StrikeForce4__DNC_Fax_LastChecked__c),0)) &amp; 
&quot; more &quot; &amp; 
IF(ROUND(180 - (NOW() - StrikeForce4__DNC_Fax_LastChecked__c),0) &gt; 1,&apos;days&apos;,&apos;day&apos;) 
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Fax Days Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Fax_LastChecked__c</fullName>
        <label>DNC Fax Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Fax_Status_Display__c</fullName>
        <formula>CASE(StrikeForce4__DNC_Fax_Status__c, 
&quot;Unknown&quot;,IMAGE(&quot;/resource/StrikeForce4__QuestionMark&quot;,&quot;Unknown&quot;) &amp; 
&quot; Unknown&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_Fax_Status__c&amp;Value=Callable&quot;, 
&quot;Mark as Ok to Call&quot;,&quot;_self&quot;), 
&quot;Do Not Call&quot;,IMAGE(&quot;/resource/StrikeForce4__XMark&quot;,&quot;Do Not Call&quot;) &amp; 
&quot; Do Not Call&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_Fax_Status__c&amp;Value=Unknown&quot;, 
&quot;Mark as Unknown&quot;,&quot;_self&quot;), 
&quot;Callable&quot;,IMAGE(&quot;/resource/StrikeForce4__CheckMark&quot;,&quot;Ok to Call&quot;) &amp; 
&quot; Ok to Call&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_Fax_Status__c&amp;Value=Do Not Call&quot;, 
&quot;Mark as Do Not Call&quot;,&quot;_self&quot;), 
IMAGE(&quot;/resource/StrikeForce4__QuestionMark&quot;,&quot;Unknown&quot;) &amp; 
&quot; Unknown&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_Fax_Status__c&amp;Value=Do Not Call&quot;, 
&quot;Mark as Do Not Call&quot;,&quot;_self&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Fax Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Fax_Status__c</fullName>
        <label>DNC Fax Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Callable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_HomePhone_LastChecked__c</fullName>
        <label>DNC Home Phone Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_HomePhone_Status__c</fullName>
        <label>DNC Home Phone Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Callable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Home_Phone_DaysRemaining__c</fullName>
        <formula>IF(NOT(ISNULL(StrikeForce4__DNC_HomePhone_LastChecked__c)), 
&quot; Valid for &quot; &amp; 
TEXT(ROUND(180 - (NOW() - StrikeForce4__DNC_HomePhone_LastChecked__c),0)) &amp; 
&quot; more &quot; &amp; 
IF(ROUND(180 - (NOW() - StrikeForce4__DNC_HomePhone_LastChecked__c),0) &gt; 1,&apos;days&apos;,&apos;day&apos;) 
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Home Phone Days Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Home_Phone_Status_Display__c</fullName>
        <formula>CASE(StrikeForce4__DNC_HomePhone_Status__c, 
&quot;Unknown&quot;,IMAGE(&quot;/resource/StrikeForce4__QuestionMark&quot;,&quot;Unknown&quot;) &amp; 
&quot; Unknown&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_HomePhone_Status__c&amp;Value=Callable&quot;, 
&quot;Mark as Ok to Call&quot;,&quot;_self&quot;), 
&quot;Do Not Call&quot;,IMAGE(&quot;/resource/StrikeForce4__XMark&quot;,&quot;Do Not Call&quot;) &amp; 
&quot; Do Not Call&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_HomePhone_Status__c&amp;Value=Unknown&quot;, 
&quot;Mark as Unknown&quot;,&quot;_self&quot;), 
&quot;Callable&quot;,IMAGE(&quot;/resource/StrikeForce4__CheckMark&quot;,&quot;Ok to Call&quot;) &amp; 
&quot; Ok to Call&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_HomePhone_Status__c&amp;Value=Do Not Call&quot;, 
&quot;Mark as Do Not Call&quot;,&quot;_self&quot;), 
IMAGE(&quot;/resource/StrikeForce4__QuestionMark&quot;,&quot;Unknown&quot;) &amp; 
&quot; Unknown&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_HomePhone_Status__c&amp;Value=Do Not Call&quot;, 
&quot;Mark as Do Not Call&quot;,&quot;_self&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Home Phone Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_MobilePhone_LastChecked__c</fullName>
        <label>DNC Mobile Phone Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_MobilePhone_Status__c</fullName>
        <label>DNC Mobile Phone Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Callable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Mobile_Phone_DaysRemaining__c</fullName>
        <formula>IF(NOT(ISNULL(StrikeForce4__DNC_MobilePhone_LastChecked__c)), 
&quot; Valid for &quot; &amp; 
TEXT(ROUND(180 - (NOW() - StrikeForce4__DNC_MobilePhone_LastChecked__c),0)) &amp; 
&quot; more &quot; &amp; 
IF(ROUND(180 - (NOW() - StrikeForce4__DNC_MobilePhone_LastChecked__c),0) &gt; 1,&apos;days&apos;,&apos;day&apos;) 
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Mobile Phone Days Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Mobile_Phone_Status__c</fullName>
        <formula>CASE(StrikeForce4__DNC_MobilePhone_Status__c, 
&quot;Unknown&quot;,IMAGE(&quot;/resource/StrikeForce4__QuestionMark&quot;,&quot;Unknown&quot;) &amp; 
&quot; Unknown&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_MobilePhone_Status__c&amp;Value=Callable&quot;, 
&quot;Mark as Ok to Call&quot;,&quot;_self&quot;), 
&quot;Do Not Call&quot;,IMAGE(&quot;/resource/StrikeForce4__XMark&quot;,&quot;Do Not Call&quot;) &amp; 
&quot; Do Not Call&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_MobilePhone_Status__c&amp;Value=Unknown&quot;, 
&quot;Mark as Unknown&quot;,&quot;_self&quot;), 
&quot;Callable&quot;,IMAGE(&quot;/resource/StrikeForce4__CheckMark&quot;,&quot;Ok to Call&quot;) &amp; 
&quot; Ok to Call&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_MobilePhone_Status__c&amp;Value=Do Not Call&quot;, 
&quot;Mark as Do Not Call&quot;,&quot;_self&quot;), 
IMAGE(&quot;/resource/StrikeForce4__QuestionMark&quot;,&quot;Unknown&quot;) &amp; 
&quot; Unknown&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_MobilePhone_Status__c&amp;Value=Do Not Call&quot;, 
&quot;Mark as Do Not Call&quot;,&quot;_self&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Mobile Phone Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_OtherPhone_LastChecked__c</fullName>
        <label>DNC Other Phone Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_OtherPhone_Status__c</fullName>
        <label>DNC Other Phone Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Callable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Other_Phone_DaysRemaining__c</fullName>
        <formula>IF(NOT(ISNULL(StrikeForce4__DNC_OtherPhone_LastChecked__c)), 
&quot; Valid for &quot; &amp; 
TEXT(ROUND(180 - (NOW() - StrikeForce4__DNC_OtherPhone_LastChecked__c),0)) &amp; 
&quot; more &quot; &amp; 
IF(ROUND(180 - (NOW() - StrikeForce4__DNC_OtherPhone_LastChecked__c),0) &gt; 1,&apos;days&apos;,&apos;day&apos;) 
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Other Phone Days Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Other_Phone_Status_Display__c</fullName>
        <formula>CASE(StrikeForce4__DNC_OtherPhone_Status__c, 
&quot;Unknown&quot;,IMAGE(&quot;/resource/StrikeForce4__QuestionMark&quot;,&quot;Unknown&quot;) &amp; 
&quot; Unknown&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_OtherPhone_Status__c&amp;Value=Callable&quot;, 
&quot;Mark as Ok to Call&quot;,&quot;_self&quot;), 
&quot;Do Not Call&quot;,IMAGE(&quot;/resource/StrikeForce4__XMark&quot;,&quot;Do Not Call&quot;) &amp; 
&quot; Do Not Call&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_OtherPhone_Status__c&amp;Value=Unknown&quot;, 
&quot;Mark as Unknown&quot;,&quot;_self&quot;), 
&quot;Callable&quot;,IMAGE(&quot;/resource/StrikeForce4__CheckMark&quot;,&quot;Ok to Call&quot;) &amp; 
&quot; Ok to Call&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_OtherPhone_Status__c&amp;Value=Do Not Call&quot;, 
&quot;Mark as Do Not Call&quot;,&quot;_self&quot;), 
IMAGE(&quot;/resource/StrikeForce4__QuestionMark&quot;,&quot;Unknown&quot;) &amp; 
&quot; Unknown&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_OtherPhone_Status__c&amp;Value=Do Not Call&quot;, 
&quot;Mark as Do Not Call&quot;,&quot;_self&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Other Phone Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Phone_DaysRemaining__c</fullName>
        <formula>IF(NOT(ISNULL(StrikeForce4__DNC_Phone_LastChecked__c)), 
&quot; Valid for &quot; &amp; 
TEXT(ROUND(180 - (NOW() - StrikeForce4__DNC_Phone_LastChecked__c),0)) &amp; 
&quot; more &quot; &amp; 
IF(ROUND(180 - (NOW() - StrikeForce4__DNC_Phone_LastChecked__c),0) &gt; 1,&apos;days&apos;,&apos;day&apos;) 
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Phone Days Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Phone_LastChecked__c</fullName>
        <label>DNC Phone Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Phone_Status_Display__c</fullName>
        <formula>CASE(StrikeForce4__DNC_Phone_Status__c, 
&quot;Unknown&quot;,IMAGE(&quot;/resource/StrikeForce4__QuestionMark&quot;,&quot;Unknown&quot;) &amp; 
&quot; Unknown&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_Phone_Status__c&amp;Value=Callable&quot;, 
&quot;Mark as Ok to Call&quot;,&quot;_self&quot;), 
&quot;Do Not Call&quot;,IMAGE(&quot;/resource/StrikeForce4__XMark&quot;,&quot;Do Not Call&quot;) &amp; 
&quot; Do Not Call&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_Phone_Status__c&amp;Value=Unknown&quot;, 
&quot;Mark as Unknown&quot;,&quot;_self&quot;), 
&quot;Callable&quot;,IMAGE(&quot;/resource/StrikeForce4__CheckMark&quot;,&quot;Ok to Call&quot;) &amp; 
&quot; Ok to Call&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_Phone_Status__c&amp;Value=Do Not Call&quot;, 
&quot;Mark as Do Not Call&quot;,&quot;_self&quot;), 
IMAGE(&quot;/resource/StrikeForce4__QuestionMark&quot;,&quot;Unknown&quot;) &amp; 
&quot; Unknown&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce4__FieldEdit?Id=&quot; &amp; Id &amp; 
&quot;&amp;ObjType=Contact&amp;Field=StrikeForce4__DNC_Phone_Status__c&amp;Value=Do Not Call&quot;, 
&quot;Mark as Do Not Call&quot;,&quot;_self&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Phone Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Phone_Status__c</fullName>
        <label>DNC Phone Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Callable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>